// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Toggle /> > Default story renders snapshot 1`] = `
<div
  class="_toggle__wrapper_76a0f7"
  data-headlessui-state=""
>
  <button
    aria-checked="false"
    aria-labelledby="headlessui-label-:r2:"
    class="_toggle__button_76a0f7 _toggle__button--unchecked_76a0f7"
    data-headlessui-state=""
    id="headlessui-control-:r0:"
    role="switch"
    tabindex="0"
    type="button"
  >
    <span
      class="_toggle__button-thumb_76a0f7"
    />
  </button>
  <label
    class="_label_f9fc7e _toggle__label_76a0f7"
    data-headlessui-state=""
    for="headlessui-control-:r0:"
    id="headlessui-label-:r2:"
  >
    <span
      class="_text_b3eba3 _text--body-md_b3eba3"
    >
      Toggle Label
    </span>
     
  </label>
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`<Toggle /> > Disabled story renders snapshot 1`] = `
<div
  class="_toggle__wrapper_76a0f7"
  data-headlessui-state=""
>
  <button
    aria-checked="false"
    aria-labelledby="headlessui-label-:rc:"
    class="_toggle__button_76a0f7 _toggle__button--unchecked_76a0f7"
    data-disabled=""
    data-headlessui-state="disabled"
    disabled=""
    id="headlessui-control-:ra:"
    role="switch"
    tabindex="0"
    type="button"
  >
    <span
      class="_toggle__button-thumb_76a0f7"
    />
  </button>
  <label
    class="_label_f9fc7e _toggle__label_76a0f7"
    data-headlessui-state=""
    for="headlessui-control-:ra:"
    id="headlessui-label-:rc:"
  >
    <span
      class="_text_b3eba3 _text--body-md_b3eba3"
    >
      Toggle Label
    </span>
     
  </label>
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`<Toggle /> > WhenChecked story renders snapshot 1`] = `
<div
  class="_toggle__wrapper_76a0f7"
  data-headlessui-state=""
>
  <button
    aria-checked="true"
    aria-labelledby="headlessui-label-:r5:"
    class="_toggle__button_76a0f7 _toggle__button--checked_76a0f7"
    data-checked=""
    data-headlessui-state="checked"
    id="headlessui-control-:r3:"
    role="switch"
    tabindex="0"
    type="button"
  >
    <span
      class="_toggle__button-thumb_76a0f7"
    />
  </button>
  <label
    class="_label_f9fc7e _toggle__label_76a0f7"
    data-headlessui-state=""
    for="headlessui-control-:r3:"
    id="headlessui-label-:r5:"
  >
    <span
      class="_text_b3eba3 _text--body-md_b3eba3"
    >
      Toggle Label
    </span>
     
  </label>
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`<Toggle /> > WithSubLabel story renders snapshot 1`] = `
<div
  class="_toggle__wrapper_76a0f7 _toggle--has-subLabel_76a0f7"
  data-headlessui-state=""
>
  <button
    aria-checked="false"
    aria-describedby="headlessui-description-:r9:"
    aria-labelledby="headlessui-label-:r8:"
    class="_toggle__button_76a0f7 _toggle__button--unchecked_76a0f7"
    data-headlessui-state=""
    id="headlessui-control-:r6:"
    role="switch"
    tabindex="0"
    type="button"
  >
    <span
      class="_toggle__button-thumb_76a0f7"
    />
  </button>
  <label
    class="_label_f9fc7e _toggle__label_76a0f7"
    data-headlessui-state=""
    for="headlessui-control-:r6:"
    id="headlessui-label-:r8:"
  >
    <span
      class="_text_b3eba3 _text--body-md_b3eba3"
    >
      Toggle Label
      <span
        class="_toggle__subLabel_76a0f7"
        data-headlessui-state=""
        id="headlessui-description-:r9:"
      >
        subLabel text description here
      </span>
    </span>
     
  </label>
  <span
    hidden=""
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
  />
</div>
`;

exports[`<Toggle /> > WithoutLabel story renders snapshot 1`] = `
<button
  aria-checked="false"
  aria-label="Lorem ipsum"
  class="_toggle__button_76a0f7 _toggle__button--unchecked_76a0f7"
  data-headlessui-state=""
  id="headlessui-switch-:rd:"
  role="switch"
  tabindex="0"
  type="button"
>
  <span
    class="_toggle__button-thumb_76a0f7"
  />
</button>
`;
